log
Wed 23 Aug 2023 04:45:29 PM UTC: 
 list.c | 5 +++++
 1 file changed, 5 insertions(+)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:32:7: error: expected identifier or ‘(’ before ‘->’ token
   32 |   List->head=NULL;
      |       ^~
Compilation failed
1a19333
Wed 23 Aug 2023 04:45:51 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:32:9: error: unused variable ‘head’ [-Werror=unused-variable]
   32 |   List *head=NULL;
      |         ^~~~
cc1: all warnings being treated as errors
Compilation failed
45208c6
